# flutter_ffi_opencv

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/cpp/: Cxx.cpp  Cxx.h  FFI.cpp  FFI.h  Person.cpp  Person.h
android/src/main/kotlin/com/example/flutter_opencv/: FlutterOpencvPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: flutter_opencv.podspec
ios/Classes/: FlutterOpencvPlugin.swift
lib/: flutter_opencv.dart  flutter_opencv_method_channel.dart  flutter_opencv_platform_interface.dart  flutter_opencv_web.dart
linux/: CMakeLists.txt  flutter_opencv_plugin.cc
linux/include/flutter_opencv/: flutter_opencv_plugin.h
macos/: flutter_opencv.podspec
macos/Classes/: FlutterOpencvPlugin.swift
test/: flutter_opencv_method_channel_test.dart  flutter_opencv_test.dart
windows/: CMakeLists.txt  flutter_opencv_plugin.cpp  flutter_opencv_plugin.h  flutter_opencv_plugin_c_api.cpp
(+5 files in other folders)
